ref/tree-sitter-tel/grammar.js
/**
 * tree-sitter-tel
 *
 * Grammar for TEL (Typed Element Language). Recognises the presentation
 * model — pragma, blocks, compounds, atoms, comments, remarks,
 * tabulations, source atoms, literal atoms. Most lexical work happens in
 * src/scanner.c because TEL is indentation- and sigil-sensitive.
 *
 * Spec: ../../spec/tel.md
 */

module.exports = grammar({
  name: 'tel',

  externals: $ => [
    $._shebang,
    $._pragma_keyword,
    $._pragma_atom,
    $._keyword,
    $._inline_atom_text,
    $._remark_text,
    $._comment_line,
    $._tabulation_line,
    $._tab_row,
    $._source_atom_text,
    $._literal_atom_open,
    $._literal_atom_body,
    $._newline,
    $._blank,
    $._indent,
    $._dedent,
    $._soft_gap_token,
    $._hard_gap_token,
    $._error_sentinel,
  ],

  extras: _ => [],

  conflicts: $ => [[$.compound]],

  rules: {
    document: $ => seq(
      optional($.shebang),
      optional($.pragma),
      repeat($._line),
    ),

    shebang: $ => seq($._shebang, $._newline),

    pragma: $ => seq(
      $._pragma_keyword,
      field('version', $._pragma_atom),
      repeat(field('atom', $._pragma_atom)),
      $._newline,
    ),

    _line: $ => choice(
      $.blank_line,
      $.comment,
      $.tabulation_block,
      $.compound,
    ),

    blank_line: $ => $._blank,

    comment: $ => seq($._comment_line, $._newline),

    tabulation_block: $ => seq(
      $.tabulation_line,
      repeat1($.tabulated_row),
    ),

    tabulation_line: $ => seq($._tabulation_line, $._newline),
    tabulated_row: $ => seq($._tab_row, $._newline),

    compound: $ => seq(
      field('keyword', $.keyword),
      repeat($._atom),
      optional(field('remark', $.remark)),
      $._newline,
      optional(choice($.source_atom, $.literal_atom)),
      // Blank lines may separate a compound from its children: a blank has no
      // structural effect (§9) except for source atoms (§14), literal atoms
      // (§15) and tabulated blocks (§16), all of which require the line to
      // follow immediately. So a blank does not close the compound, and §13
      // resolves parentage against "the most recent preceding non-blank
      // compound line".
      //
      // This is ambiguous with ending the compound and taking the blank as a
      // sibling line, hence the declared conflict: the two readings are told
      // apart by whether an `_indent` follows, which only the scanner knows.
      optional(seq(repeat($.blank_line), $.children)),
    ),

    // A visible wrapper around the hidden `_keyword` external token, so a compound's opening keyword
    // is a queryable node (e.g. for syntax highlighting) rather than an anonymous token. The
    // `externals` array and the external scanner are unchanged.
    keyword: $ => $._keyword,

    // Each atom carries an explicit preceding-gap node — soft_atom for a
    // 1-space separator (§10.3 initial mode), hard_atom for a 2-or-more-space
    // separator (which also locks the rest of the line into hard-space mode,
    // making subsequent soft spaces part of atom content). The atom's
    // content is the byte range from the gap's end to the atom's end.
    _atom: $ => choice($.soft_atom, $.hard_atom),

    soft_atom: $ => seq($.soft_gap, $._inline_atom_text),
    hard_atom: $ => seq($.hard_gap, $._inline_atom_text),

    soft_gap: $ => $._soft_gap_token,
    hard_gap: $ => $._hard_gap_token,

    remark: $ => seq(
      choice($.soft_gap, $.hard_gap),
      $._remark_text,
    ),

    source_atom: $ => $._source_atom_text,

    literal_atom: $ => seq(
      field('delimiter', $._literal_atom_open),
      $._newline,
      field('body', $._literal_atom_body),
    ),

    children: $ => seq($._indent, repeat1($._line), $._dedent),
  },
});
