ref/tree-sitter-tel/test/corpus/comments.txt
==================
comment at document start
==================
# a leading comment
name alice
---

(document
  (comment)
  (compound
    (keyword)
    (soft_atom
      (soft_gap))))

==================
multiple comments
==================
# first
# second
# third
name alice
---

(document
  (comment)
  (comment)
  (comment)
  (compound
    (keyword)
    (soft_atom
      (soft_gap))))

==================
comment between compounds with blank line
==================
a

# explanatory
b
---

(document
  (compound
    (keyword))
  (blank_line)
  (comment)
  (compound
    (keyword)))

==================
comment inside child block
==================
parent
  # comment
  child
---

(document
  (compound
    (keyword)
    (children
      (comment)
      (compound
        (keyword)))))

==================
empty comment
==================
#
name alice
---

(document
  (comment)
  (compound
    (keyword)
    (soft_atom
      (soft_gap))))
