ref/tree-sitter-tel/test/corpus/compounds.txt
==================
single keyword
==================
name
---

(document
  (compound
    (keyword)))

==================
keyword with inline atom
==================
name alice
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))))

==================
keyword with multiple inline atoms
==================
phone work +44 20 7946 0958
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))
    (soft_atom
      (soft_gap))
    (soft_atom
      (soft_gap))
    (soft_atom
      (soft_gap))
    (soft_atom
      (soft_gap))))

==================
hard space mode atoms
==================
name  Alice Anderson
---

(document
  (compound
    (keyword)
    (hard_atom
      (hard_gap))))

==================
nested children
==================
phone
  country-code 44
  number 020-7946-0100
---

(document
  (compound
    (keyword)
    (children
      (compound
        (keyword)
        (soft_atom
          (soft_gap)))
      (compound
        (keyword)
        (soft_atom
          (soft_gap))))))

==================
peer compounds
==================
name alice
email alice@example.org
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap)))
  (compound
    (keyword)
    (soft_atom
      (soft_gap))))

==================
deep nesting
==================
a
  b
    c
      d
---

(document
  (compound
    (keyword)
    (children
      (compound
        (keyword)
        (children
          (compound
            (keyword)
            (children
              (compound
                (keyword)))))))))

==================
blank line before first child
==================
parent

  child
---

(document
  (compound
    (keyword)
    (blank_line)
    (children
      (compound
        (keyword)))))

==================
blank line before a deeper comment
==================
parent

  # a note
  child
---

(document
  (compound
    (keyword)
    (blank_line)
    (children
      (comment)
      (compound
        (keyword)))))

==================
blank line does not make a source atom
==================
parent

    payload
---

(document
  (compound
    (keyword))
  (blank_line)
  (compound
    (keyword)))

==================
source atom still needs to follow immediately
==================
parent
    payload
---

(document
  (compound
    (keyword)
    (source_atom)))
