ref/tree-sitter-tel/test/corpus/gaps.txt
==================
soft gap (one space)
==================
name alice
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))))

==================
hard gap (two spaces) makes the atom a single phrase
==================
name  Alice Anderson
---

(document
  (compound
    (keyword)
    (hard_atom
      (hard_gap))))

==================
hard gap (three spaces)
==================
name   alice
---

(document
  (compound
    (keyword)
    (hard_atom
      (hard_gap))))

==================
mixed soft then hard
==================
name alice  Bob Builder
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))
    (hard_atom
      (hard_gap))))

==================
hard then more hard (hard mode persists)
==================
name  alice  bob
---

(document
  (compound
    (keyword)
    (hard_atom
      (hard_gap))
    (hard_atom
      (hard_gap))))

==================
remark with soft gap
==================
name alice # comment text
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))
    (remark
      (soft_gap))))

==================
remark with hard gap
==================
name alice  # comment text
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))
    (remark
      (hard_gap))))

==================
hard gap before sigil that is NOT a remark
==================
name alice  #
---

(document
  (compound
    (keyword)
    (soft_atom
      (soft_gap))
    (hard_atom
      (hard_gap))))
