ref/tree-sitter-tel/test/corpus/tabulation.txt
==================
tabulation basic
==================
# Name  # Age
Alice   30
Bob     25
---

(document
  (tabulation_block
    (tabulation_line)
    (tabulated_row)
    (tabulated_row)))

==================
tabulation row omits columns
==================
# A  # B  # C
x    1
y    2    extra
---

(document
  (tabulation_block
    (tabulation_line)
    (tabulated_row)
    (tabulated_row)))

==================
tabulation indented
==================
parent
  # Name  # Age
  Alice   30
---

(document
  (compound
    (keyword)
    (children
      (tabulation_block
        (tabulation_line)
        (tabulated_row)))))
